<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:id="@+id/user_search_view_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bar_outer_background"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/user_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/search_bar_background"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_github_users" />
    </FrameLayout>

    <ViewFlipper
        android:id="@+id/content_view_flipper"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_search_view_frame">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/github_user_list_swipe_to_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/github_users_list_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <FrameLayout
            android:id="@+id/empty_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_user_found_search_query"
                android:textSize="17sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/welcome_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_search"
                android:textSize="17sp" />
        </FrameLayout>

        <include
            android:id="@+id/error_view"
            layout="@layout/error_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

    </ViewFlipper>
</androidx.constraintlayout.widget.ConstraintLayout>
